z-index added to prevent overflow, position fixed to top-right

--- a/source/style.scss
+++ b/source/style.scss
@@ -7,7 +7,7 @@
 
  .extension-webfont {
 	
-	position: absolute;
+	position: fixed;
 	right: 1rem;
 	top: 1rem;
 	width: 300px;
@@ -18,6 +18,7 @@
  	background: rgba(#fff, 1);
  	opacity: .1;
  	transition: .2s all;
+  z-index: 999999;
 
  	& * {
  		-webkit-font-smoothing: antialiased;
@@ -68,3 +69,5 @@
  	}
 
  }
+
+Acked-by: M. Oguz <mustafaoguz@gmx.com>
